@@ -1,5 +1,8 @@
 0.21.3	UNRELEASED
 
+ * Add support for ``worktreeconfig`` extension.
+   (Jelmer Vernooĳ)
+
 0.21.2	2023-01-18
 
  * Fix early file close bug in ``dulwich.pack.extend_pack``.
